<resources>
    <string name="app_name">AirDesk</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="owned_workspaces">Owned Workspaces</string>
    <string name="foreign_workspaces">Foreign Workspaces</string>
    <string name="title_activity_workspace_list">WorkspaceList</string>
    <string name="workspace">Workspace</string>
    <string name="quota">Available Quota</string>
    <string name="plus">+</string>
    <string name="title_activity_browse_workspace">BrowseWorkspace</string>
    <string name="remove_files">Remove Selected Files</string>
    <string name="addFile">Add File</string>
    <string name="add_workspace">Add Workspace</string>
    <string name="invite">Invite to Workspace</string>
    <string name="viewers">Workspace Viewers</string>
    <string name="workspace_settings">Workspace Settings</string>
    <string name="leave_delete">Leave / Delete Workspace</string>
    <string name="title_activity_file_manager_test">FileManagerTestActivity</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_viewers">ViewersActivity</string>
    <string name="title_activity_create_workspace">CreateWorkspace</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_file_editor">FileEditorActivity</string>
    <string name="title_activity_file_viewer">FileViewerActivity</string>
    <string name="title_activity_wifi">WifiActivity</string>

</resources>
