<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmov.airdesk.WorkspaceList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:text="@string/workspace"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:text="@string/quota"
            android:gravity="center"/>
        </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/workspace_list"
        android:layout_weight="1"/>

    <Button
        android:onClick = "addWorkspace"
        android:id="@+id/add_workspace"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:text="@string/plus"/>

</LinearLayout>
